[gd_scene load_steps=12 format=3 uid="uid://pf881onj6kso"]

[ext_resource type="Script" path="res://game.gd" id="1_lteyb"]
[ext_resource type="Script" path="res://left_player.gd" id="2_pnd1d"]
[ext_resource type="Script" path="res://ball.gd" id="3_edfly"]
[ext_resource type="Script" path="res://right_player.gd" id="4_igsys"]
[ext_resource type="Theme" uid="uid://3oypcg7vnled" path="res://default.tres" id="5_uco1t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gulf8"]
size = Vector2(20, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jy82q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2rr0"]
size = Vector2(1080, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_unioy"]
size = Vector2(1080, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mi34x"]
size = Vector2(20, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdsk6"]
size = Vector2(20, 720)

[node name="Game" type="Node2D"]
script = ExtResource("1_lteyb")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Fill" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -560.0
offset_top = -380.0
offset_right = 520.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Line" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -380.0
offset_right = -10.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="leftPlayer" type="StaticBody2D" parent="."]
position = Vector2(-510, 0)
script = ExtResource("2_pnd1d")

[node name="ColorRect" type="ColorRect" parent="leftPlayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -40.0
offset_right = 10.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftPlayer"]
shape = SubResource("RectangleShape2D_gulf8")

[node name="ball" type="CharacterBody2D" parent="."]
script = ExtResource("3_edfly")

[node name="ColorRect" type="ColorRect" parent="ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
shape = SubResource("RectangleShape2D_jy82q")

[node name="rightPlayer" type="StaticBody2D" parent="."]
position = Vector2(510, 0)
script = ExtResource("4_igsys")

[node name="ColorRect" type="ColorRect" parent="rightPlayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -40.0
offset_right = 10.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightPlayer"]
shape = SubResource("RectangleShape2D_gulf8")

[node name="walls" type="StaticBody2D" parent="."]

[node name="topWall" type="CollisionShape2D" parent="walls"]
position = Vector2(0, -350)
shape = SubResource("RectangleShape2D_d2rr0")

[node name="bottomWall" type="CollisionShape2D" parent="walls"]
position = Vector2(0, 350)
shape = SubResource("RectangleShape2D_unioy")

[node name="scoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="scoreLeft"]
position = Vector2(-555, 0)
shape = SubResource("RectangleShape2D_mi34x")

[node name="scoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="scoreRight"]
position = Vector2(555, 0)
shape = SubResource("RectangleShape2D_qdsk6")

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LeftScore" type="Label" parent="HUD"]
layout_mode = 0
offset_left = -307.0
offset_top = -300.0
offset_right = -222.0
offset_bottom = -235.0
theme = ExtResource("5_uco1t")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "00"

[node name="RightScore" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 222.0
offset_top = -300.0
offset_right = 307.0
offset_bottom = -235.0
theme = ExtResource("5_uco1t")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "00"

[connection signal="body_entered" from="scoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="scoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="tree_entered" from="scoreRight/CollisionShape2D" to="." method="_on_collision_shape_2d_tree_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
