[gd_scene load_steps=8 format=3 uid="uid://pf881onj6kso"]

[ext_resource type="Script" path="res://game/game.gd" id="1_v4sa8"]
[ext_resource type="Theme" uid="uid://3oypcg7vnled" path="res://default.tres" id="3_xpyry"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2rr0"]
size = Vector2(1920, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_unioy"]
size = Vector2(1920, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mi34x"]
size = Vector2(20, 1080)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdsk6"]
size = Vector2(20, 1080)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7vl8h"]
size = Vector2(20, 1080)

[node name="Game" type="Node2D"]
script = ExtResource("1_v4sa8")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Fill" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 1900.0
offset_bottom = 1060.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Line" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 930.0
offset_top = -20.0
offset_right = 950.0
offset_bottom = 1060.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="walls" type="StaticBody2D" parent="."]

[node name="topWall" type="CollisionShape2D" parent="walls"]
position = Vector2(960, -10)
shape = SubResource("RectangleShape2D_d2rr0")

[node name="bottomWall" type="CollisionShape2D" parent="walls"]
position = Vector2(960, 1090)
shape = SubResource("RectangleShape2D_unioy")

[node name="scoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="scoreLeft"]
position = Vector2(-10, 540)
shape = SubResource("RectangleShape2D_mi34x")

[node name="scoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="scoreRight"]
position = Vector2(1930, 540)
shape = SubResource("RectangleShape2D_qdsk6")

[node name="incrementer" type="Area2D" parent="."]
position = Vector2(960, 540)

[node name="CollisionShape2D" type="CollisionShape2D" parent="incrementer"]
shape = SubResource("RectangleShape2D_7vl8h")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 40.0
offset_right = 1000.0
offset_bottom = 80.0
metadata/_edit_use_anchors_ = true

[node name="LeftScore" type="Label" parent="HUD"]
layout_mode = 0
offset_left = -371.0
offset_right = -200.0
offset_bottom = 129.0
theme = ExtResource("3_xpyry")
theme_override_font_sizes/font_size = 128
text = "00"
metadata/_edit_use_anchors_ = true

[node name="RightScore" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 200.0
offset_right = 285.0
offset_bottom = 65.0
theme = ExtResource("3_xpyry")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 128
text = "00"
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="scoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="scoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="tree_entered" from="scoreRight/CollisionShape2D" to="." method="_on_collision_shape_2d_tree_entered"]
[connection signal="body_entered" from="incrementer" to="." method="_on_incrementer_body_entered"]
